# ditherette

./: .gitignore  README.md  SPEC.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  wrangler.jsonc
.plans/: palette-matcher-js-optimization-study.md  palette-matcher-optimization.md  rust-wasm-port.md  (+2 more)
crates/ditherette-wasm/: Cargo.toml  README.md
crates/ditherette-wasm/benches/: area_resampling.rs  resize_bilinear.rs  resize_filters.rs  resize_nearest.rs  row_band_tiling.rs
crates/ditherette-wasm/examples/: resize_tiling_sweep.rs
crates/ditherette-wasm/src/: error.rs  lib.rs  wasm.rs
crates/ditherette-wasm/src/image/: dimensions.rs  mod.rs  rgba.rs
crates/ditherette-wasm/src/resize/: antialias.rs  area.rs  bicubic.rs  bilinear.rs  box.rs  buffers.rs  convolution.rs  convolution_reference.rs  cpu_tiling.rs  lanczos.rs  lanczos2.rs  lanczos2_scale_aware.rs  lanczos3.rs  lanczos3_scale_aware.rs  mod.rs  nearest.rs  trilinear.rs
crates/ditherette-wasm/src/resize/reference/: antialias.rs  area.rs  bicubic.rs  bilinear.rs  convolution.rs  lanczos.rs  nearest.rs  trilinear.rs
crates/ditherette-wasm/src/resize/scalar/: antialias.rs  area.rs  area_tests.rs  bicubic.rs  bilinear.rs  convolution.rs  lanczos.rs  mod.rs  nearest.rs  nearest_tests.rs  trilinear.rs
crates/ditherette-wasm/src/resize/shared/: bicubic.rs  convolution.rs  lanczos.rs  mod.rs  pixels.rs
crates/ditherette-wasm/src/resize/tiling/: area.rs  mod.rs  nearest.rs
crates/ditherette-wasm/tests/: resize_bilinear.rs  resize_filters.rs  resize_nearest.rs  wasm_resize.rs
(+171 files in other folders)
