[package]
name = "ditherette-wasm"
version = "0.1.0"
edition = "2021"
description = "Rust/Wasm core for Ditherette experiments."
license = "UNLICENSED"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
tiling = ["dep:rayon"]

[dependencies]
rayon = { version = "1.11", optional = true }
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
image = { version = "0.25", default-features = false, features = ["png"] }

[[example]]
name = "resize_tiling_sweep"
required-features = ["tiling"]

[[bench]]
name = "resize_nearest"
harness = false

[[bench]]
name = "resize_bilinear"
harness = false

[[bench]]
name = "resize_filters"
harness = false

[profile.release]
opt-level = "s"

[profile.bench]
opt-level = 3
